@@ -1,3 +1,9 @@
+2006-09-19  Alex Graveley  <alex@beatniksoftware.com>
+
+	* Tomboy/Applet.cs: Keep the menu verb callbacks in a static
+	member, since they are being reaped unexpectedly, causing crashes
+	sometimes when opening Preferences.
+
 2006-09-13  Matic Zgur  <mr.zgur@gmail.com>
 
 	* configure.in: Added Slovenian (sl) to ALL_LINGUAS.
